fix scrollbar

--- a/themes/hfng/assets/scss/_normalize.scss
+++ b/themes/hfng/assets/scss/_normalize.scss
@@ -12,14 +12,14 @@
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
-  background: #212020;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: rgba(0,0,0,.2);
+  border-radius: 10px;
 
   &:hover {
-    background: #dcdcdc;
+    background: rgba(0,0,0,.3);
   }
 }
 
